--- a/src/main.scss
+++ b/src/main.scss
@@ -1,161 +1,246 @@
-$mainColor : #333;
+$basicColor: #333;
+$mainColor: #a951bf;
+$subColor1: #bf5160;
+$subColor2: #a951bf;
+$subColor3: #fbd1d3;
+$subColor4: #f198b0;
+$subColor5: #ebb2d6;
+$subColor6: #9f81cd;
+$subColor7: #766dc1;
 
 html {
-    font-size: 10px;
+  font-size: 10px;
+  word-break: break-word;
+  background: #f7f7f7;
 }
 
 body {
-    font-size: 1.6rem;
+  font-size: 1.6rem;
 }
-
+.case {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 .FP {
-    color: $mainColor;
+  color: $basicColor;
 
-    .section {
-        &.active {
-            font-size: 10rem;
-            transition: 1s 1s;
-        }
+  .section {
+    &.active h2 {
+      font-size: 10rem;
+      transition: 1s 1s;
     }
+  }
 
-    .inner {
-        height: 100vh;
-    }
+  .inner {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
 
-    .gnb {
-        position: fixed;
-        top: 50%;
-        right: 5rem;
-        transform: translateY(-50%);
-        width: 3rem;
-        z-index: 999;
+  .gnb {
+    // position: fixed;
+    // top: 50%;
+    // right: 5rem;
+    // transform: translateY(-50%);
+    // width: 3rem;
+    // z-index: 999;
+    ul {
+      display: flex;
+      gap: 15px;
 
-        li {
-            font-size: 0;
-            position: relative;
-            height: 2rem;
+      li {
+        // font-size: 0;
+        // position: relative;
+        // height: 2rem;
 
-            a {
-                display: block;
-                height: 2rem;
+        // a {
+        //   display: block;
+        //   height: 2rem;
 
-                &::after {
-                    content: "";
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    width: 50%;
-                    height: 1px;
-                    background: $mainColor;
-                    transition: width 0.5s;
-                }
-            }
+        //   &::after {
+        //     content: "";
+        //     position: absolute;
+        //     top: 0;
+        //     right: 0;
+        //     width: 50%;
+        //     height: 1px;
+        //     background: $mainColor;
+        //     transition: width 0.5s;
+        //   }
+        // }
+        a {
+          display: block;
+          font-size: 18px;
+          position: relative;
         }
-
-        li.on {
-            a {
-                &::after {
-                    width: 100%;
-                }
-            }
+        &.on a::before {
+          content: "";
+          display: block;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          background: $mainColor;
+          position: absolute;
+          bottom: 100%;
+          left: 50%;
+          transform: translate(-50%);
+          margin-bottom: 5px;
+          //animation: blink 1.2s ease infinite;
         }
+      }
     }
+  }
+  .arrow_bt {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    border-radius: 100%;
+    background: $mainColor;
+    animation: updown 2s ease infinite;
+    margin-top: 50px;
+    font-size: 23px;
+  }
 
+  //포폴시작
+  .home {
+    display: flex;
+    & > div {
+      flex: 1;
+    }
+  }
 }
 
 .cover {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    background: $mainColor;
-    color: #fff;
-    z-index: 999;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  background: $basicColor;
+  color: #fff;
+  z-index: 2;
 
-    &.on {
-        display: block;
-    }
+  &.on {
+    display: block;
+  }
 }
 
 .header {
-    position: fixed;
-    top: 20rem;
-    left: 50%;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  padding: 15px 0;
+  z-index: 1;
+  .inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // position: relative;
+  }
 }
-
 .cover_open {
-    position: fixed;
-    top: 5rem;
-    right: 5rem;
-    z-index: 1000;
-    font-size: 0;
-    width: 3rem;
-    height: 3rem;
+  position: absolute;
+  font-size: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 3rem;
+  height: 3rem;
+  z-index: 5;
 
+  &.on {
     &::before {
-        content: "";
-        position: absolute;
-        top: 5px;
-        left: 3px;
-        right: 3px;
-        height: 1px;
-        background: $mainColor;
+      display: none;
     }
 
     &::after {
-        content: "";
-        position: absolute;
-        bottom: 5px;
-        left: 3px;
-        right: 3px;
-        height: 1px;
-        background: $mainColor;
+      display: none;
     }
 
     span {
-        &::before {
-            content: "";
-            position: absolute;
-            top: calc(50% - 0.5px);
-            left: 3px;
-            right: 3px;
-            height: 1px;
-            background: $mainColor;
-        }
+      &::before {
+        transform: rotate(45deg);
+      }
 
-        &::after {
-            content: "";
-            position: absolute;
-            top: calc(50% - 0.5px);
-            left: 3px;
-            right: 3px;
-            height: 1px;
-            background: $mainColor;
-        }
+      &::after {
+        transform: rotate(-45deg);
+      }
     }
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 3px;
+    right: 3px;
+    height: 1px;
+    background: $basicColor;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 5px;
+    left: 3px;
+    right: 3px;
+    height: 1px;
+    background: $basicColor;
+  }
+
+  span {
+    &::before {
+      content: "";
+      position: absolute;
+      top: calc(50% - 0.5px);
+      left: 3px;
+      right: 3px;
+      height: 1px;
+      background: $basicColor;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: calc(50% - 0.5px);
+      left: 3px;
+      right: 3px;
+      height: 1px;
+      background: $basicColor;
+    }
+  }
 }
 
-.cover_open.on {
+.fp-watermark {
+  opacity: 0;
+  visibility: hidden;
+}
 
-    &::before {
-        display: none;
-    }
+@keyframes updown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 
-    &::after {
-        display: none;
-    }
-
-    span {
-        &::before {
-            transform: rotate(45deg);
-        }
-
-        &::after {
-            transform: rotate(-45deg);
-        }
-    }
-
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
