--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -13,6 +13,11 @@ $tdely: 0.5s 0.5s;
 $tdely1: 0.5s 1s;
 $tdely2: 0.5s 1.5s;
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 html {
   font-size: 10px;
   word-break: break-word;
@@ -56,6 +61,9 @@ body {
       & h2 {
         transform: translateY(-100px);
         opacity: 0;
+        font-size: 30px;
+        font-weight: 500;
+        padding-bottom: 60px;
       }
 
       .info {
@@ -74,7 +82,67 @@ body {
       transition: $tdely2;
     }
     .content {
+      a.more_bt {
+        font-size: 16px;
+        color: $mainColor;
+        svg {
+          animation: width 2s ease infinite;
+          vertical-align: -2px;
+        }
+      }
+    }
+    h3 {
+      font-size: 21px;
+      padding-bottom: 30px;
+      font-weight: 500;
       display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+    &.RESUME .content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 50px;
+
+      .resume_box {
+        .sub_content {
+          background: #fff;
+          border-radius: 30px;
+          padding: 30px;
+        }
+        &:not(:last-child) .sub_content > ul > li {
+          & ~ li {
+            padding-top: 20px;
+          }
+          & div:first-child {
+            font-weight: 500;
+            padding-bottom: 5px;
+          }
+        }
+        &:first-child span:first-child {
+          font-weight: 500;
+        }
+        &:first-child li div:nth-child(3),
+        &:first-child li div:last-child {
+          display: flex;
+          gap: 20px;
+        }
+        &:last-child {
+          grid-column: 1 / 3;
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            li div {
+              text-align: center;
+              span {
+                display: block;
+                text-align: center;
+              }
+            }
+          }
+        }
+      }
     }
     &.PROJECT {
       .swiper-slide {
@@ -208,13 +276,27 @@ body {
     animation: updown 2s ease infinite;
     margin-top: 50px;
     font-size: 23px;
+    cursor: pointer;
   }
 
   //포폴시작
   .home {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
     & > div {
-      flex: 1;
+      &.home_right {
+        width: 500px;
+        .about_txt {
+          height: 100px;
+          font-size: 30px;
+          white-space: pre-line;
+        }
+      }
+      .about {
+        line-height: 1.8;
+      }
     }
   }
 }
@@ -336,6 +418,17 @@ body {
   }
   100% {
     transform: translateY(0);
+  }
+}
+@keyframes width {
+  0% {
+    width: 16px;
+  }
+  50% {
+    width: 0%;
+  }
+  100% {
+    width: 16px;
   }
 }
 
