--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -43,7 +43,57 @@ body {
   transform: translate(-50%, -50%);
   width: 500px;
   background: #fff;
+  padding: 30px;
+  border-radius: 30px;
   z-index: 3;
+  button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    background: none;
+    border: 0;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  caption {
+    opacity: 0;
+    visibility: hidden;
+  }
+  table th,
+  table td {
+    padding: 5px 15px;
+    ul.color li {
+      display: inline-block;
+      font-size: 0;
+      width: 20px;
+      height: 20px;
+      vertical-align: middle;
+      & ~ li {
+        margin-left: 5px;
+      }
+    }
+    ul.mdetail li {
+      display: flex;
+      gap: 5px;
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: $basicColor;
+        margin-top: 7px;
+      }
+    }
+  }
+  table th {
+    text-align: left;
+    font-weight: 500;
+    width: 120px;
+  }
+  table td {
+    font-weight: 300;
+  }
 }
 .case {
   display: flex;
@@ -82,6 +132,10 @@ body {
       transition: $tdely2;
     }
     .content {
+      .more {
+        display: flex;
+        justify-content: flex-end;
+      }
       a.more_bt {
         font-size: 16px;
         color: $mainColor;
@@ -93,7 +147,6 @@ body {
     }
     h3 {
       font-size: 21px;
-      padding-bottom: 30px;
       font-weight: 500;
       display: flex;
       justify-content: space-between;
@@ -109,6 +162,7 @@ body {
           background: #fff;
           border-radius: 30px;
           padding: 30px;
+          margin-top: 30px;
         }
         &:not(:last-child) .sub_content > ul > li {
           & ~ li {
@@ -164,13 +218,47 @@ body {
           width: 100%;
           height: 0;
           z-index: 1;
-          background: rgba(0, 0, 0, 0.5);
+          background: rgba(0, 0, 0, 0.8);
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: center;
           color: #fff;
           opacity: 0;
+          padding: 15px;
+          .pr_bt {
+            display: flex;
+            gap: 15px;
+            padding-top: 20px;
+            & > * {
+              width: 100px;
+              padding: 10px 0;
+              text-align: center;
+              font-size: 13px;
+              border-radius: 30px;
+              border: 0;
+              font-weight: 500;
+              svg {
+                margin-left: 5px;
+                vertical-align: -2px;
+              }
+            }
+            button {
+              background: $mainColor;
+              color: #fff;
+              cursor: pointer;
+              &:hover svg {
+                animation: rotate 0.5s;
+              }
+            }
+            a {
+              background: #fff;
+              color: $basicColor;
+              &:hover svg {
+                animation: blink 0.5s infinite;
+              }
+            }
+          }
           // ul {
           //   position: absolute;
           //   bottom: 0;
@@ -323,7 +411,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  padding: 15px 0;
+  padding: 50px 0;
   z-index: 1;
   .inner {
     display: flex;
@@ -429,6 +517,14 @@ body {
   }
   100% {
     width: 16px;
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(180deg);
   }
 }
 
