--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -27,6 +27,10 @@ html {
 body {
   font-size: 1.6rem;
 }
+// ::selection {
+//   background-color: black;
+//   color: yellow;
+// }
 .modal_on {
   position: absolute;
   top: 0;
@@ -58,41 +62,6 @@ body {
   caption {
     opacity: 0;
     visibility: hidden;
-  }
-  table th,
-  table td {
-    padding: 5px 15px;
-    ul.color li {
-      display: inline-block;
-      font-size: 0;
-      width: 20px;
-      height: 20px;
-      vertical-align: middle;
-      & ~ li {
-        margin-left: 5px;
-      }
-    }
-    ul.mdetail li {
-      display: flex;
-      gap: 5px;
-      &::before {
-        content: "";
-        display: inline-block;
-        width: 5px;
-        height: 5px;
-        border-radius: 50%;
-        background: $basicColor;
-        margin-top: 7px;
-      }
-    }
-  }
-  table th {
-    text-align: left;
-    font-weight: 500;
-    width: 120px;
-  }
-  table td {
-    font-weight: 300;
   }
 }
 .case {
@@ -163,6 +132,10 @@ body {
           border-radius: 30px;
           padding: 30px;
           margin-top: 30px;
+          ::selection {
+            background-color: black;
+            color: yellow;
+          }
         }
         &:not(:last-child) .sub_content > ul > li {
           & ~ li {
@@ -294,12 +267,121 @@ body {
         font-size: 15px;
       }
     }
+    &.CONTACT {
+      .contact {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+        .con_left {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          li {
+            &:nth-child(2) {
+              padding-top: 30px;
+            }
+            & ~ li {
+              padding-top: 30px;
+              a span {
+                font-size: 18px;
+                color: #000;
+                background: linear-gradient(
+                    to right,
+                    transparent 50%,
+                    rgb(255, 218, 55) 50%
+                  )
+                  0px 0px / 200%;
+                text-underline-offset: 3.5px;
+                transition: all 0.25s ease 0s;
+              }
+              a:hover span {
+                background-position: -100% 0px;
+              }
+              svg,
+              img {
+                width: 20px;
+                height: 20px;
+                vertical-align: top;
+                margin-right: 5px;
+              }
+            }
+          }
+        }
+        .con_right form {
+          background: #fff;
+          border-radius: 30px;
+          padding: 30px;
+        }
+      }
+    }
+    table th,
+    table td {
+      padding: 5px 15px;
+      ul.color li {
+        display: inline-block;
+        font-size: 0;
+        width: 20px;
+        height: 20px;
+        vertical-align: middle;
+        & ~ li {
+          margin-left: 5px;
+        }
+      }
+      ul.mdetail li {
+        display: flex;
+        gap: 5px;
+        &::before {
+          content: "";
+          display: inline-block;
+          width: 5px;
+          height: 5px;
+          border-radius: 50%;
+          background: $basicColor;
+          margin-top: 7px;
+        }
+      }
+    }
+    table th {
+      text-align: left;
+      font-weight: 500;
+      width: 120px;
+    }
+    table td {
+      font-weight: 300;
+    }
+    input {
+      width: 100%;
+      border: 0;
+      border-bottom: 2px solid $basicColor;
+      height: 35px;
+      padding: 0 15px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 150px;
+      padding: 15px;
+      border: 2px solid $basicColor;
+    }
+    .bt_box {
+      padding-top: 15px;
+      text-align: center;
+      button {
+        width: 100%;
+        background: $mainColor;
+        color: $basicColor;
+        padding: 7px;
+        border-radius: 30px;
+        cursor: pointer;
+      }
+    }
   }
 
   .inner {
-    max-width: 1200px;
+    max-width: 1230px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 15px;
   }
 
   .gnb {
