--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -64,6 +64,12 @@ body {
     visibility: hidden;
   }
 }
+.inner {
+  max-width: 1230px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
 .case {
   display: flex;
   flex-direction: column;
@@ -377,12 +383,6 @@ body {
     }
   }
 
-  .inner {
-    max-width: 1230px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
 
   .gnb {
     // position: fixed;
@@ -573,6 +573,66 @@ body {
     }
   }
 }
+/*sub*/
+.sub{
+  padding:50px 15px;
+  h3{
+    text-align: center;
+    font-size:35px;
+    font-weight: 600;
+    padding:30px 0;
+  }
+  h4{
+    font-size:21px;
+    padding-bottom:30px;
+    display:flex;
+    gap: 15px;
+    align-items: center;
+    &::before{
+      content:"";
+      display:inline-block;
+      width:10px;
+      height: 10px;
+      border-radius:50%;
+      background: $basicColor;
+    }
+  }
+  .skill_box {
+    & > div:not(:first-of-type){
+      padding-top:50px;
+    }
+    ul{
+      padding:30px;
+      border-radius: 30px;
+      background:#fff;
+      ::selection{
+            background-color: black;
+              color: yellow;
+      }
+    li{
+    display:flex;
+    gap:30px;
+    align-items: center;
+    div:first-child{
+      width:200px;
+      font-weight:500;
+      font-size:18px;
+      img{
+        margin-right:15px;
+      }
+    }
+    div:last-child{
+      width:calc(100% - 150px);
+    }
+    &~li{
+      padding-top:25px;
+    }
+    }
+}
+}
+}
+
+
 
 .fp-watermark {
   opacity: 0;
