--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -27,6 +27,9 @@ html {
 body {
   font-size: 1.6rem;
 }
+body.stop-scrolling {
+  overflow: hidden;
+}
 // ::selection {
 //   background-color: black;
 //   color: yellow;
@@ -39,6 +42,10 @@ body {
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 2;
+}
+
+body.stop-scrolling .modal_on {
+  position: fixed;
 }
 .modal_box {
   position: absolute;
@@ -177,102 +184,6 @@ body {
         }
       }
     }
-    &.PROJECT {
-      .swiper-slide {
-        position: relative;
-        width: 300px;
-        .img_box {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-          background: $basicColor;
-        }
-        .pr_info {
-          position: absolute;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          height: 0;
-          z-index: 1;
-          background: rgba(0, 0, 0, 0.8);
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          color: #fff;
-          opacity: 0;
-          padding: 15px;
-          .pr_bt {
-            display: flex;
-            gap: 15px;
-            padding-top: 20px;
-            & > * {
-              width: 100px;
-              padding: 10px 0;
-              text-align: center;
-              font-size: 13px;
-              border-radius: 30px;
-              border: 0;
-              font-weight: 500;
-              svg {
-                margin-left: 5px;
-                vertical-align: -2px;
-              }
-            }
-            button {
-              background: $mainColor;
-              color: #fff;
-              cursor: pointer;
-              &:hover svg {
-                animation: rotate 0.5s;
-              }
-            }
-            a {
-              background: #fff;
-              color: $basicColor;
-              &:hover svg {
-                animation: blink 0.5s infinite;
-              }
-            }
-          }
-          // ul {
-          //   position: absolute;
-          //   bottom: 0;
-          //   height: 0;
-          //   width: 100%;
-          //   text-align: center;
-          // }
-          // .pr_bt {
-          //   transform: translateY(-100px);
-          //   opacity: 0;
-          // }
-        }
-        &.on {
-          .pr_info {
-            height: 200px;
-            opacity: 1;
-            transition: $tdely;
-          }
-        }
-      }
-      .swiper-button-prev,
-      .swiper-button-next {
-        color: $wColor;
-        width: 30px;
-        height: 30px;
-        background: $basicColor;
-        border-radius: 50%;
-        margin-top: 0;
-        transform: translateY(-50%);
-      }
-      .swiper-button-prev:after,
-      .swiper-button-next:after {
-        font-size: 15px;
-      }
-    }
     &.CONTACT {
       .contact {
         display: grid;
@@ -320,69 +231,7 @@ body {
         }
       }
     }
-    table th,
-    table td {
-      padding: 5px 15px;
-      ul.color li {
-        display: inline-block;
-        font-size: 0;
-        width: 20px;
-        height: 20px;
-        vertical-align: middle;
-        & ~ li {
-          margin-left: 5px;
-        }
-      }
-      ul.mdetail li {
-        display: flex;
-        gap: 5px;
-        &::before {
-          content: "";
-          display: inline-block;
-          width: 5px;
-          height: 5px;
-          border-radius: 50%;
-          background: $basicColor;
-          margin-top: 7px;
-        }
-      }
-    }
-    table th {
-      text-align: left;
-      font-weight: 500;
-      width: 120px;
-    }
-    table td {
-      font-weight: 300;
-    }
-    input {
-      width: 100%;
-      border: 0;
-      border-bottom: 2px solid $basicColor;
-      height: 35px;
-      padding: 0 15px;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      padding: 15px;
-      border: 2px solid $basicColor;
-    }
-    .bt_box {
-      padding-top: 15px;
-      text-align: center;
-      button {
-        width: 100%;
-        background: $mainColor;
-        color: $basicColor;
-        padding: 7px;
-        border-radius: 30px;
-        cursor: pointer;
-      }
-    }
   }
-
 
   .gnb {
     // position: fixed;
@@ -471,6 +320,182 @@ body {
   }
 }
 
+table {
+  th,
+  td {
+    padding: 5px 15px;
+    ul.color li {
+      display: inline-block;
+      font-size: 0;
+      width: 20px;
+      height: 20px;
+      vertical-align: middle;
+      & ~ li {
+        margin-left: 5px;
+      }
+    }
+    ul.mdetail li {
+      display: flex;
+      gap: 5px;
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: $basicColor;
+        margin-top: 7px;
+      }
+    }
+  }
+  th {
+    text-align: left;
+    font-weight: 500;
+    width: 120px;
+  }
+  td {
+    font-weight: 300;
+  }
+  input {
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid $basicColor;
+    height: 35px;
+    padding: 0 15px;
+  }
+
+  textarea {
+    width: 100%;
+    height: 150px;
+    padding: 15px;
+    border: 2px solid $basicColor;
+  }
+}
+.bt_box {
+  padding-top: 15px;
+  text-align: center;
+  button {
+    width: 100%;
+    background: $mainColor;
+    color: $basicColor;
+    padding: 7px;
+    border-radius: 30px;
+    cursor: pointer;
+  }
+}
+
+/*서브 공통이라 뺌*/
+.PROJECT {
+  .portfolio_box {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    column-count: 3;
+    grid-gap: 30px;
+    .pr_item {
+      padding-bottom: 100%;
+      width: 100%;
+      h3 {
+        padding: 0;
+      }
+    }
+  }
+  .pr_item {
+    position: relative;
+    width: 300px;
+    .img_box {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: $basicColor;
+    }
+    .pr_info {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 0;
+      z-index: 1;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      opacity: 0;
+      padding: 15px;
+      visibility: hidden;
+      .pr_bt {
+        display: flex;
+        gap: 15px;
+        padding-top: 20px;
+        & > * {
+          width: 100px;
+          padding: 10px 0;
+          text-align: center;
+          font-size: 13px;
+          border-radius: 30px;
+          border: 0;
+          font-weight: 500;
+          svg {
+            margin-left: 5px;
+            vertical-align: -2px;
+          }
+        }
+        button {
+          background: $mainColor;
+          color: #fff;
+          cursor: pointer;
+          &:hover svg {
+            animation: rotate 0.5s;
+          }
+        }
+        a {
+          background: #fff;
+          color: $basicColor;
+          &:hover svg {
+            animation: blink 0.5s infinite;
+          }
+        }
+      }
+      // ul {
+      //   position: absolute;
+      //   bottom: 0;
+      //   height: 0;
+      //   width: 100%;
+      //   text-align: center;
+      // }
+      // .pr_bt {
+      //   transform: translateY(-100px);
+      //   opacity: 0;
+      // }
+    }
+    &.on {
+      .pr_info {
+        height: 200px;
+        opacity: 1;
+        transition: 0.5s all;
+        visibility: visible;
+      }
+    }
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: $wColor;
+    width: 30px;
+    height: 30px;
+    background: $basicColor;
+    border-radius: 50%;
+    margin-top: 0;
+    transform: translateY(-50%);
+  }
+  .swiper-button-prev:after,
+  .swiper-button-next:after {
+    font-size: 15px;
+  }
+}
 .cover {
   display: none;
   position: fixed;
@@ -574,65 +599,63 @@ body {
   }
 }
 /*sub*/
-.sub{
-  padding:50px 15px;
-  h3{
+.sub {
+  padding: 50px 15px;
+  h3 {
     text-align: center;
-    font-size:35px;
+    font-size: 35px;
     font-weight: 600;
-    padding:30px 0;
+    padding: 30px 0;
   }
-  h4{
-    font-size:21px;
-    padding-bottom:30px;
-    display:flex;
+  h4 {
+    font-size: 21px;
+    padding-bottom: 30px;
+    display: flex;
     gap: 15px;
     align-items: center;
-    &::before{
-      content:"";
-      display:inline-block;
-      width:10px;
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 10px;
       height: 10px;
-      border-radius:50%;
+      border-radius: 50%;
       background: $basicColor;
     }
   }
   .skill_box {
-    & > div:not(:first-of-type){
-      padding-top:50px;
+    & > div:not(:first-of-type) {
+      padding-top: 50px;
     }
-    ul{
-      padding:30px;
+    ul {
+      padding: 30px;
       border-radius: 30px;
-      background:#fff;
-      ::selection{
-            background-color: black;
-              color: yellow;
+      background: #fff;
+      ::selection {
+        background-color: black;
+        color: yellow;
       }
-    li{
-    display:flex;
-    gap:30px;
-    align-items: center;
-    div:first-child{
-      width:200px;
-      font-weight:500;
-      font-size:18px;
-      img{
-        margin-right:15px;
+      li {
+        display: flex;
+        gap: 30px;
+        align-items: center;
+        div:first-child {
+          width: 200px;
+          font-weight: 500;
+          font-size: 18px;
+          img {
+            margin-right: 15px;
+          }
+        }
+        div:last-child {
+          width: calc(100% - 150px);
+        }
+        & ~ li {
+          padding-top: 25px;
+        }
       }
     }
-    div:last-child{
-      width:calc(100% - 150px);
-    }
-    &~li{
-      padding-top:25px;
-    }
-    }
+  }
 }
-}
-}
-
-
 
 .fp-watermark {
   opacity: 0;
