--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -35,7 +35,8 @@ body.stop-scrolling {
 //   color: yellow;
 // }
 .modal_on {
-  position: absolute;
+  // position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -71,6 +72,10 @@ body.stop-scrolling .modal_on {
     visibility: hidden;
   }
 }
+.section {
+  height: 100vh;
+  overflow: hidden !important;
+}
 .inner {
   max-width: 1230px;
   width: 100%;
@@ -83,6 +88,7 @@ body.stop-scrolling .modal_on {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  overflow: hidden !important;
 }
 .FP {
   color: $basicColor;
@@ -91,8 +97,8 @@ body.stop-scrolling .modal_on {
     .tit {
       text-align: center;
       & h2 {
-        transform: translateY(-100px);
-        opacity: 0;
+        // transform: translateY(-100px);
+        // opacity: 0;
         font-size: 30px;
         font-weight: 500;
         padding-bottom: 60px;
@@ -104,9 +110,9 @@ body.stop-scrolling .modal_on {
       }
     }
     &.active h2 {
-      transform: translateY(0);
-      opacity: 1;
-      transition: $tdely;
+      // transform: translateY(0);
+      // opacity: 1;
+      // transition: $tdely;
     }
     &.active .info {
       transform: translateX(0);
@@ -286,17 +292,6 @@ body.stop-scrolling .modal_on {
       }
     }
   }
-  .arrow_bt {
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    border-radius: 100%;
-    background: $mainColor;
-    animation: updown 2s ease infinite;
-    margin-top: 50px;
-    font-size: 23px;
-    cursor: pointer;
-  }
 
   //포폴시작
   .home {
@@ -319,7 +314,17 @@ body.stop-scrolling .modal_on {
     }
   }
 }
-
+.arrow_bt {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 100%;
+  background: $mainColor;
+  animation: updown 2s ease infinite;
+  margin-top: 50px;
+  font-size: 23px;
+  cursor: pointer;
+}
 table {
   th,
   td {
@@ -408,7 +413,7 @@ table {
       top: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
+      overflow: hidden !important;
       background: $basicColor;
     }
     .pr_info {
@@ -519,11 +524,12 @@ table {
   transform: translateX(-50%);
   width: 100%;
   padding: 50px 0;
-  z-index: 1;
+  z-index: 3;
   .inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1600px;
     // position: relative;
   }
 }
@@ -656,7 +662,19 @@ table {
     }
   }
 }
-
+.top_bt {
+  position: fixed;
+  right: 100px;
+  bottom: 100px;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s ease-in;
+}
+.top_bt.on {
+  visibility: visible;
+  opacity: 1;
+}
 .fp-watermark {
   opacity: 0;
   visibility: hidden;
