--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -28,7 +28,7 @@ body {
   font-size: 1.6rem;
 }
 body.stop-scrolling {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 // ::selection {
 //   background-color: black;
@@ -42,7 +42,7 @@ body.stop-scrolling {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: 3;
 }
 
 body.stop-scrolling .modal_on {
@@ -666,7 +666,7 @@ table {
   position: fixed;
   right: 100px;
   bottom: 100px;
-  z-index: 10;
+  z-index: 2;
   opacity: 0;
   visibility: hidden;
   transition: 0.3s ease-in;
