--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -87,7 +87,7 @@ body.stop-scrolling .modal_on {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  // height: 100vh;
   overflow: hidden !important;
 }
 .FP {
@@ -511,18 +511,18 @@ table {
   background: $basicColor;
   color: #fff;
   z-index: 2;
-  padding:50px 30px;
+  padding: 50px 30px;
 
   &.on {
     display: block;
   }
-  ul li~li{
-    padding-top:15px;
+  ul li ~ li {
+    padding-top: 15px;
   }
-  a{
-    display:block;
+  a {
+    display: block;
     text-align: center;
-    font-size:18px;
+    font-size: 18px;
   }
 }
 
@@ -540,19 +540,23 @@ table {
     align-items: center;
     max-width: 1600px;
     // position: relative;
+    h1 a {
+      display: block;
+    }
   }
 }
 .cover_open {
   position: absolute;
   font-size: 0;
   right: 15px;
-  top:15px;
+  top: 50%;
+  transform: translateY(-50%);
   width: 3rem;
   height: 3rem;
-  border:0;
-  background:transparent;
+  border: 0;
+  background: transparent;
   z-index: 5;
-  display:none;
+  display: none;
 
   &.on {
     &::before {
@@ -566,7 +570,7 @@ table {
     span {
       &::before {
         transform: rotate(45deg);
-        background:#fff;
+        background: #fff;
       }
 
       &::after {
