--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -534,6 +534,9 @@ table {
   width: 100%;
   padding: 50px 0;
   z-index: 3;
+  &.on {
+    background: #fff;
+  }
   .inner {
     display: flex;
     justify-content: space-between;
