--- a/src/css/reset.scss
+++ b/src/css/reset.scss
@@ -39,7 +39,7 @@ body {
   line-height: 1.4;
   letter-spacing: -0.025em;
   color: #444;
-  word-break: keep-all;
+  word-break: break-all;
 }
 
 ul,
