--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -754,3 +754,39 @@ table {
     opacity: 1;
   }
 }
+
+.dainPass {
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: $wColor;
+    width: 30px;
+    height: 30px;
+    background: $basicColor;
+    border-radius: 50%;
+    margin-top: 0;
+    transform: translateY(-50%);
+  }
+  .swiper-button-prev:after,
+  .swiper-button-next:after {
+    font-size: 15px;
+  }
+  .code {
+    max-width: 1200px;
+    margin: 40px auto 0;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 40px;
+    ol {
+      padding-top: 20px;
+      margin-left: 20px;
+      li {
+        list-style: disc;
+
+        b {
+          font-weight: 600;
+          font-size: 16px;
+        }
+      }
+    }
+  }
+}
